--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "hexo-server": "^0.3.3"
   },
   "scripts": {
-    "d": "hexo clean && hexo d"
+    "d": "hexo clean && hexo g && cp -r ../Seichi/seichi-map/build/ ./public/Seichi &&  hexo d"
   }
 }
