--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,10 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
-  
+
+symbols_count_time:
+  symbols: true
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
